# QtWaitingSpinner

./: .gitignore  README.md  demo.py  pyproject.toml  setup.py  test_waitingspinnerwidget.py  waitingspinnerwidget.py
.github/workflows/: test.yml
